apps/productivity/papra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: papra
  namespace: papra
  labels:
    app: papra
spec:
  ports:
    - port: 80
      targetPort: 1221
  selector:
    app: papra
