apps/productivity/papra/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: papra
  namespace: papra
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`papra.internal.crussell.io`)
      kind: Rule
      services:
        - name: papra
          port: 80
  tls:
    certResolver: letsencrypt
